--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -55,6 +55,11 @@ body.dark .summary {
     width: 100%;
     padding: 0.75rem 1rem;
   }
+
+  .profile-pic {
+    width: 180px;
+    height: 180px;
+  }
 }
 
 @media (max-width: 480px) {
