--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -115,12 +115,12 @@
 
 @media (max-width: 480px) {
   .projects-section {
-    padding: 5rem 0.5rem 1rem 0.5rem;
+    padding: 7rem 0.5rem 1rem 0.5rem;
   }
 
   .main-heading {
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
   }
 
   .projects-grid {
