--- a/src/pages/Publications.css
+++ b/src/pages/Publications.css
@@ -89,17 +89,20 @@
 
 @media (min-width: 481px) and (max-width: 1024px) and (orientation: landscape) {
   .publications-section {
-    padding-top: 14rem;
+    padding-top: 7rem;
+  }
+  .main-heading {
+    margin-bottom: 5rem;
   }
 }
 
 @media (max-width: 480px) {
   .publications-section {
-    padding: 5rem 0.5rem 1rem 0.5rem;
+    padding: 7rem 0.5rem 1rem 0.5rem;
   }
   .main-heading {
     font-size: 1.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 3rem;
   }
   .publication-list {
     gap: 1rem;
